--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Great Person Tracker v1.0</title>
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="favicon.png" />
     <style>
       * {
         font-family: rubik, helvetica, arial, sans-serif;
