--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <td>Medieval</td>
           <td>
             Gain 100 Faith (on Standard speed). This Holy Site’s adjacency
-            bonuses gain an additional +Science bonus.
+            bonuses gain an additional Science bonus.
           </td>
         </tr>
         <tr>
@@ -175,7 +175,7 @@
           <td>Renaissance</td>
           <td>
             Chosen Campus gains +2 Housing and +1 Amenity. Increases non-Food
-            yields of improvements by +1.
+            yield benefits of happiness in your empire by 40%.
           </td>
         </tr>
         <tr>
@@ -256,7 +256,8 @@
           <td>Modern</td>
           <td>
             Triggers one random Eureka for one random technology from the Modern
-            or Atomic Era. Applies 100% to Great People recruited.
+            or Atomic Era. Applies 100 free Great People points towards
+            recruiting all current or future Great People.
           </td>
         </tr>
         <tr>
@@ -264,7 +265,7 @@
           <td>Erwin Schrödinger</td>
           <td>Modern</td>
           <td>
-            Triggers the Eureka for two random technologies from the Atomic or
+            Triggers the Eureka for three random technologies from the Atomic or
             Information Era.
           </td>
         </tr>
@@ -387,8 +388,9 @@
           <td>Mimar Sinan</td>
           <td>Renaissance</td>
           <td>
-            +1 Housing for this city, +1 Amenity for this city. Culture Bomb
-            adjacent tiles when completing an Industrial Zone in any city.
+            +1 Housing for this city, +1 Amenity for this city.
+            <br /><br />*R&F: Culture Bomb adjacent tiles when completing an
+            Industrial Zone in any city.
           </td>
         </tr>
         <tr>
@@ -423,9 +425,9 @@
           <td>Shah Jahan</td>
           <td>Modern</td>
           <td>
-            Grants 920 Production towards wonder construction, capped at half
-            your current treasury, then reduces your Gold value by the amount of
-            purchased Production.
+            Grants Production towards wonder construction, capped at half your
+            current treasury, then reduces your Gold value by twice the amount
+            of purchased Production.
           </td>
         </tr>
         <tr>
